--- a/style.css
+++ b/style.css
@@ -547,7 +547,7 @@ footer{
         flex-direction: column;
     }
     .footer a{
-        margin-top: 5O%;
+        margin-top: 50%;
     }
 
 /* homepage      */
