--- a/style.css
+++ b/style.css
@@ -283,16 +283,30 @@ h1 span{
     margin-right: 7%;
 }
 
-.facts p{
+.facts ul{
+    list-style: none;
     width: 100%;
-    padding-top: 10% ;
-    padding-right: 9%;
-    padding-left: 12%;
+    padding-top: 10%;
+    padding-left: 10%; 
     color: #FFFFF4;
     font-size: clamp(18px, 10vh, 21px);
     width: 235px;
     height: 180px;
-    line-height: 29px;
+    line-height: 25px;
+    justify-content: center;
+    align-items: center;
+}
+
+.facts p{
+    list-style: none;
+    width: 100%;
+    padding-top: 10%;
+    padding-left: 10%;
+    color: #FFFFF4;
+    font-size: clamp(1px, 10vh, 21px);
+    width: 235px;
+    height: 180px;
+    line-height: 25px;
     justify-content: center;
     align-items: center;
 }
@@ -428,7 +442,7 @@ button{
 }
 
 .slides{
-    width: calc(428px * 3);
+    width: calc(428px * 1);
     animation: glisse 10s infinite;
 }
 
@@ -626,10 +640,13 @@ footer{
     }
     .facts{
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
         gap: 0.9%;
-        justify-content: space-between;
+        /* justify-content: space-between; */
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
         margin-left: 7%;
         margin-right: 7%;
     }
@@ -754,8 +771,8 @@ footer{
 
     .facts{
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(8, 1fr);
         gap: 0.9%;
         justify-content: space-between;
         margin-left: 7%;
